--- a/src/HomePage/Movies/Movies.css
+++ b/src/HomePage/Movies/Movies.css
@@ -10,6 +10,7 @@ body{
     /* margin-right: 10px; */
 }
 .rating {
+    margin-top: -4px;
     padding: 0 11px;
     border-radius: 0 0 8px 8px;
     background: #000;
@@ -21,7 +22,12 @@ body{
 .rating span{
     margin: 0 10px ;
 }
+.movies-box-row {
+    flex-wrap: wrap;
+    display: flex;
+}
 .box {
+    margin: 22px 0;
     padding: 0 10px;
 }
 .img-box img {
