--- a/src/HomePage/Banner/Banner.css
+++ b/src/HomePage/Banner/Banner.css
@@ -6,3 +6,15 @@
 .banner-sec{
     margin: 1rem 0;
 }
+@media (min-width:320px) and (max-width:670px) {
+    .slick-slide img {
+        display: block;
+        width: 100%;
+    }
+}
+@media (max-width:980px) and (min-width:670px)  {
+    .slick-slide img {
+        display: block;
+        width: 100%;
+    }
+}
