--- a/src/HomePage/NavBar/NavBar.css
+++ b/src/HomePage/NavBar/NavBar.css
@@ -23,7 +23,7 @@
   height: 25px;
   margin-right: 10px !important;
   line-height: 25px !important;
- margin-top: 12px !important;
+  margin-top: 12px !important;
   text-align: center;
   border-radius: 4px;
   border: 1px solid rgb(248, 68, 100) !important;
@@ -32,6 +32,28 @@
   justify-content: center !important;
   text-transform: none !important;
 }
-.hamburger-icon{
-margin-left: 20px !important;
+.hamburger-icon {
+  margin-left: 20px !important;
+}
+@media (min-width: 320px) and (max-width: 670px) {
+  .searchbar {
+    display: none !important;
+  }
+  .place-selected {
+    display: none !important;
+  }
+  .css-1guk29 {
+    display: inline-flex !important;
+  }
+  .hamburger-icon {
+    display: none !important;
+  }
+  .signin-btn {
+    margin-bottom: 10px !important;
+  }
+}
+@media (max-width:980px) and (min-width:670px)  {
+  .css-1guk29 {
+    display: inline-flex !important;
+  }
 }
