--- a/src/HomePage/NavBar/NavBarBottom.css
+++ b/src/HomePage/NavBar/NavBarBottom.css
@@ -24,3 +24,13 @@
     color: #fff;
     font-family: Roboto;
 }
+@media (min-width: 320px) and (max-width: 670px) {
+  .nav-bot{
+    display: none;
+  }
+}
+@media (max-width:980px) and (min-width:670px)  {
+  .nav-bot{
+    display: none;
+  }
+}
