--- a/src/SeatBookingPage/SeatChoosing/SeatChoosing.css
+++ b/src/SeatBookingPage/SeatChoosing/SeatChoosing.css
@@ -111,7 +111,7 @@
   justify-content: center;
   align-items: center;
   width: 25%;
-padding: 12px;
+  padding: 12px;
   box-shadow: 0 1px 8px rgba(0, 0, 0, 0.16);
   border-radius: 8px;
   cursor: pointer;
@@ -125,4 +125,9 @@ padding: 12px;
 .seat-design-diamond {
   white-space: nowrap;
   overflow-x: auto;
+}
+@media (min-width: 320px) and (max-width: 670px) {
+  .price-display-btn {
+    width: 50%;
+  }
 }
